fixed clipping

--- a/ai_talk/slide_style.css
+++ b/ai_talk/slide_style.css
@@ -19,7 +19,7 @@ body {
 
 .slide img {
   max-width: 100%;
-  max-height: 85%;
+  max-height: 100%;
   height: auto;
   object-fit: contain;
 
